snapshots/truth__resolve__tests__basic_func.snap
---
source: src/resolve.rs
expression: "resolve_reformat::<ast::Script>(r#\"\n    int foo(int x) {\n        return x;\n    }\n\n    script script0 {\n        int x = 3;\n        foo(x);  // should match `foo` definition\n    }\"#).trim()"
---
int foo_0(int x_0) {
    return x_0;
}


script script0 {
    int x_1 = 3;
    foo_0(x_1);
}
