snapshots/truth__resolve__tests__basic_func_out_of_order.snap
---
source: src/resolve.rs
expression: "resolve_reformat::<ast::Script>(r#\"\n    script script0 {\n        int x = 3;\n        foo(x);  // should match `foo` definition\n    }\n\n    int foo(int x) {\n        return x;\n    }\n    \"#).trim()"
---
script script0 {
    int x_5 = 3;
    foo_4(x_5);
}


int foo_4(int x_6) {
    return x_6;
}
