snapshots/truth__resolve__tests__basic_local.snap
---
source: src/resolve.rs
expression: "resolve_reformat::<ast::Block>(r#\"{\n        int a = 3;\n        int b = a + a;  // should use same `a`\n    }\"#).trim()"
---
{
    int a_0 = 3;
    int b_0 = (a_0 + a_0);
}
