snapshots/truth__resolve__tests__basic_reg_alias.snap
---
source: src/resolve.rs
expression: "resolve_reformat::<ast::Block>(r#\"{\n        ins_21(A, X);\n    }\"#).trim()"
---
{
    ins_21(A_0, X_0);
}
