snapshots/truth__resolve__tests__const_after_scope_end.snap
---
source: src/resolve/tests.rs
expression: "resolve_expect_err::<ast::Block>(r#\"{\n    if (true) {\n        const int a = 4;\n        int b = a;  // should be OK\n    }\n    int c = a;  // should fail at `a`\n}\"#,\n                                 \"in this scope\").trim()"
---
error: unknown variable 'a'
  ┌─ <input>:6:13
  │
6 │     int c = a;  // should fail at `a`
  │             ^ not found in this scope
