snapshots/truth__resolve__tests__const_scoped_using_local.snap
---
source: src/resolve/tests.rs
expression: "resolve_expect_err::<ast::Block>(r#\"{\n    int x = 2;\n    const int foo = x;  // should fail at `x`\n}\"#,\n                                 \"nested const\").trim()"
---
error: cannot use local from outside const
  ┌─ <input>:3:21
  │
2 │     int x = 2;
  │         - defined here
3 │     const int foo = x;  // should fail at `x`
  │                     ^ used in a nested const
